<resources>
    <string name="app_name">Happy Places</string>
    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_description"> Description</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="text_add_image">ADD IMAGE</string>
    <string name="btn_text_save">SAVE</string>
    <string name="note_text_no_happy_places_found_yet">No Happy Places Found Yet. Kindly Add One.</string>
</resources>